# PhotoTag

./: .gitignore  App.jsx  Cargo.toml  GPU_INFERENCE.md  IMPLEMENTATION_NOTES.md  README.md  build.rs  config.rs  db.rs  embedding.rs  error.rs  exiftool.rs  gpu.rs  index.html  jobs.rs  main.rs  models.rs  onnx.rs  package-lock.json  package.json  scan.rs  schema.rs  styles.css  tagging.rs  tauri.conf.json  thumbnails.rs
icons/: icon.icns
models/: person_detector.tags.txt  scene_classifier.tags.txt
scripts/: fetch_onnxruntime_directml.ps1  fetch_onnxruntime_directml.sh
shaders/: histogram.wgsl  resize.wgsl
src/: App.jsx  styles.css
