[package]
name = "photo-tagger"
version = "0.1.0"
description = "An offline photo catalog and tagging application"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

[[bin]]
name = "photo-tagger"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "dialog-all", "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31.0", features = ["bundled", "modern_sqlite"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

# Logging & Errors
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.58"

# Async
tokio = { version = "1", features = ["full"] }

# Utilities
lazy_static = "1.4.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
