[package]
name = "photo-tagger"
version = "0.1.0"
description = "An offline photo catalog and tagging application"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

[[bin]]
name = "photo-tagger"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = [ "dialog-all", "path-all", "fs-all", "shell-open", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.3"

# Database
rusqlite = { version = "0.31.0", features = ["bundled", "modern_sqlite"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"

# Logging & Errors
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.58"

# Async
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# Utilities
lazy_static = "1.4.0"
walkdir = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.24", features = ["png", "jpeg"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
ndarray = "0.16"
ort = { version = "2.0.0-rc.10", features = ["load-dynamic", "directml"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
